# nyc-taxi-mlops

./: .gitignore  AGENTS.md  README.md  full-spec.md  phase-1-outcomes.md  pyproject.toml
dbt_taxi/: .gitignore  dbt_project.yml
dbt_taxi/models/bronze/: bronze_yellow_tripdata.sql
notebooks/: 01_data_exploration.ipynb
src/ingest/: fetch_taxi_data.py
