[project]
name = "nyc-taxi-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "tqdm>=4.67.3",
    "altair>=5.4.0",
    "dbt-duckdb>=1.10.1",
]
